Fixed bug that didn't let users click on the sign in card by removing 'z-index: 1;' from .login-overlay in loginPagesStyles.css

--- a/loginPage/loginPageStyles.css
+++ b/loginPage/loginPageStyles.css
@@ -23,7 +23,7 @@ body{
     position: fixed; 
     inset: 0; 
     /* add background image where %s is at */
-    background-image: url(%S); 
+    background-image: url(../imgs/NPU_campusView_1.jpg); 
     background-size: cover; 
     background-position: center top; 
     z-index: 0; 
@@ -34,7 +34,6 @@ body{
     position: fixed; 
     inset: 0; 
     background: linear-gradient(to bottom, rgba(10, 20, 40, 0.45) 0%, rgba(10,20,40,0.65) 100%); 
-    z-index: 1; 
 }
 
 /* layer 3: centers the card on screen  */
